<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.damia.myapplication.newActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:text="@string/lbl_z_litry"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="30dp" />

        <EditText
            android:id="@+id/editTextL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView4"
            android:layout_alignBottom="@+id/textView4"
            android:layout_marginLeft="11dp"
            android:layout_marginStart="11dp"
            android:layout_toEndOf="@+id/textView4"
            android:layout_toRightOf="@+id/textView4"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textView4"
            android:layout_alignRight="@+id/textView4"
            android:layout_below="@+id/editTextL"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:text="@string/lbl_p_km" />

        <EditText
            android:id="@+id/editTextKm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:layout_alignBaseline="@+id/textView7"
            android:layout_alignBottom="@+id/textView7"
            android:layout_alignLeft="@+id/editTextL"
            android:layout_alignStart="@+id/editTextL" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_below="@+id/radioGroup"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="calculate"
            android:text="@string/btn_oblicz" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/btn_save"
            tools:layout_editor_absoluteX="280dp"
            tools:layout_editor_absoluteY="318dp"
            android:onClick="saveToDateBase"/>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="162dp"
            android:layout_height="108dp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="339dp"
            android:layout_below="@+id/editTextKm"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="29dp">

            <RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/radioButton6"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/radioButton6"
                android:layout_below="@+id/radioButton6"
                android:layout_weight="1"
                android:text="@string/lbl_c"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="7dp" />

            <RadioButton
                android:id="@+id/radioButton6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lbl_cl" />
        </RadioGroup>

        <EditText
            android:id="@+id/editText12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:ems="10"
            android:inputType="numberDecimal"
            android:layout_alignTop="@+id/radioGroup"
            android:layout_alignLeft="@+id/editTextKm"
            android:layout_alignStart="@+id/editTextKm" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
